Add daemon management and IPC integration for MCP servers